--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.4"
+    "react-particles-js": "^3.4.0",
+    "react-scripts": "3.4.4",
+    "react-tilt": "^0.1.4",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
